--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>Desert</h3>
       </div>
       <div
-        class="slide active"
+        class="slide"
         style="
           background-image: url('https://images.unsplash.com/uploads/141362941583982a7e0fc/abcfbca1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80');
         "
